<resources>
    <string name="app_name">test5</string>
    <string name="product_nam">Product Name</string>
    <string name="start">START</string>
    <string name="scanning">SCANNING</string>
    <string name="some_id1">Скорость</string>
    <string name="some_id2">Подсказки</string>
    <string name="some_id3">Антиcпам</string>
    <string name="AntySpamOn">Вкл.</string>
    <string name="AntySpamOff">Выкл.</string>
    <string name="some_id4">Сканер\nжучков</string>
</resources>