<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#05041D"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/ellipse_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:accessibilityLiveRegion="polite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ellipse_4" />

    <ImageView
        android:id="@+id/ellipse_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:accessibilityLiveRegion="polite"
        android:adjustViewBounds="false"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ellipse_3" />

    <LinearLayout
        android:id="@+id/Heder"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Programname"
            android:layout_width="135dp"
            android:layout_height="23dp"
            android:layout_marginStart="21.18dp"
            android:layout_marginTop="17.71dp"
            android:text="@string/product_nam"
            android:textAppearance="@style/product_nam" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ImageProgram"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Heder">

        <ImageView
            android:id="@+id/groupe_27"
            android:layout_width="wrap_content"
            android:layout_height="78dp"
            android:layout_gravity="center"
            android:background="@drawable/group_27"
            app:srcCompat="@drawable/group_27"
            tools:srcCompat="@drawable/group_27" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/MainButtonFrame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageProgram">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:background="@drawable/groupe_8"
            android:contentDescription="@string/product_nam"
            android:src="@drawable/ellipse_35" />

        <TextView
            android:id="@+id/StartingScaner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-15dp"
            android:text="@string/start"
            android:textAppearance="@style/start" />

        <TextView
            android:id="@+id/StartingScaner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/scanning"
            android:textAppearance="@style/scann" />

    </FrameLayout>

    <ImageView
        android:id="@+id/ImageBackgroundMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainButtonFrame"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/rectangle_2" />

    <ImageView
        android:id="@+id/ImageSeparatorMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintBottom_toBottomOf="@+id/ImageBackgroundMenu"
        app:layout_constraintEnd_toEndOf="@+id/ImageBackgroundMenu"
        app:layout_constraintStart_toStartOf="@+id/ImageBackgroundMenu"
        app:layout_constraintTop_toTopOf="@+id/ImageBackgroundMenu"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/union" />

    <FrameLayout
        android:id="@+id/SpeedTestButtonFrame"
        android:layout_width="160dp"
        android:layout_height="98dp"
        app:layout_constraintStart_toStartOf="@+id/ImageSeparatorMenu"
        app:layout_constraintTop_toTopOf="@+id/ImageSeparatorMenu">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/divider_horizontal_bright"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/group" />

        <TextView
            android:id="@+id/TextSpeedTest"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:text="@string/some_id1"
            android:textAppearance="@style/some_id" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/HintsButtonFrame"
        android:layout_width="161dp"
        android:layout_height="103dp"
        app:layout_constraintEnd_toEndOf="@+id/ImageSeparatorMenu"
        app:layout_constraintTop_toTopOf="@+id/ImageSeparatorMenu">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/divider_horizontal_bright"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/groupe_5" />

        <TextView
            android:id="@+id/test534"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:text="@string/some_id2"
            android:textAppearance="@style/some_id" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/ScannerButtonFrame"
        android:layout_width="162dp"
        android:layout_height="103dp"
        app:layout_constraintBottom_toBottomOf="@+id/ImageSeparatorMenu"
        app:layout_constraintEnd_toEndOf="@+id/ImageSeparatorMenu">

        <ImageButton
            android:layout_width="158dp"
            android:layout_height="102dp"
            android:background="@android:drawable/divider_horizontal_bright"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/dasdad" />

        <TextView
            android:id="@+id/some_id4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="55dp"
            android:text="@string/some_id4"
            android:textAppearance="@style/some_id" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/AntiSpamButtonFrame"
        android:layout_width="162dp"
        android:layout_height="103dp"
        app:layout_constraintBottom_toBottomOf="@+id/ImageSeparatorMenu"
        app:layout_constraintStart_toStartOf="@+id/ImageSeparatorMenu">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/divider_horizontal_bright"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/subtract" />

        <TextView
            android:id="@+id/test53"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="55dp"
            android:text="@string/some_id3"
            android:textAppearance="@style/some_id" />

        <TextView
            android:id="@+id/StateAntySpamText"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:text="@string/AntySpamOff"
            android:textAppearance="@style/AntySpamStyle" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>