<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#05041D"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/ellipse_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:accessibilityLiveRegion="polite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ellipse_4" />

    <ImageView
        android:id="@+id/ellipse_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:accessibilityLiveRegion="polite"
        android:adjustViewBounds="false"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ellipse_3" />

    <TextView
        android:id="@+id/product_nam"
        android:layout_width="135dp"
        android:layout_height="23dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21.18dp"
        android:layout_marginTop="17.71dp"
        android:gravity="top"
        android:text="@string/product_nam"
        android:textAppearance="@style/product_nam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/group_27"
        android:layout_width="141.54dp"
        android:layout_height="78dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="66.33dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ellipse_3"
        app:srcCompat="@drawable/groupe_27" />


    <ImageButton
        android:id="@+id/ellipse_35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:background="@drawable/groupe_8"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/ellipse_4"
        app:layout_constraintEnd_toEndOf="@+id/ellipse_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_27"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ellipse_35" />

    <TextView
        android:id="@+id/start"
        android:layout_width="98dp"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:gravity="center_horizontal|top"
        android:text="@string/start"
        android:textAppearance="@style/start"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ellipse_35"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/ellipse_35"
        app:layout_constraintTop_toTopOf="@+id/ellipse_35" />

    <TextView
        android:id="@+id/scann"
        android:layout_width="99dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal|top"
        android:text="@string/scanning"
        android:textAppearance="@style/scann"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ellipse_35"
        app:layout_constraintStart_toStartOf="@+id/ellipse_35"
        app:layout_constraintTop_toBottomOf="@+id/start" />

    <ImageView
        android:id="@+id/rectangle_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/ellipse_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ellipse_35"
        app:layout_constraintVertical_bias="0.262"
        app:srcCompat="@drawable/rectangle_2" />

    <ImageView
        android:id="@+id/union"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_2"
        app:layout_constraintStart_toStartOf="@+id/rectangle_2"
        app:layout_constraintTop_toTopOf="@+id/rectangle_2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/union" />

    <ImageButton
        android:id="@+id/group"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="158dp"
        android:layout_height="102dp"
        android:background="@android:drawable/divider_horizontal_bright"
        android:contentDescription="@string/app_name"
        android:onClick="group_button"
        app:layout_constraintBottom_toBottomOf="@+id/ellipse_3"
        app:layout_constraintEnd_toEndOf="@+id/union"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/union"
        app:layout_constraintTop_toTopOf="@+id/rectangle_2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/group" />

    <TextView
        android:id="@+id/some_id1"
        android:layout_width="129dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="-2sp"
        android:text="@string/some_id1"
        android:textAppearance="@style/some_id"
        app:layout_constraintBottom_toBottomOf="@+id/group"
        app:layout_constraintEnd_toEndOf="@+id/group"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="@+id/group"
        app:layout_constraintTop_toTopOf="@+id/group"
        app:layout_constraintVertical_bias="0.888" />

    <ImageView
        android:id="@+id/group_iteractable"
        android:layout_width="218dp"
        android:layout_height="130dp"
        android:layout_marginStart="-21dp"
        android:layout_marginTop="-5dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rectangle_2"
        app:layout_constraintTop_toTopOf="@+id/rectangle_2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/mask_group"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/some_id2"
        android:layout_width="87.5dp"
        android:layout_height="23.96dp"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="-2sp"
        android:text="@string/some_id2"
        android:textAppearance="@style/some_id"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_2"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="@+id/rectangle_2"
        app:layout_constraintTop_toTopOf="@+id/rectangle_2"
        app:layout_constraintVertical_bias="0.357" />

    <ImageButton
        android:id="@+id/group2"
        android:layout_width="161dp"
        android:layout_height="103dp"
        android:background="@android:drawable/divider_horizontal_bright"
        android:contentDescription="@string/app_name"
        android:onClick="group_button2"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_2"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="@+id/rectangle_2"
        app:layout_constraintTop_toTopOf="@+id/rectangle_2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/groupe_5" />

    <ImageView
        android:id="@+id/group_iteractable2"
        android:layout_width="221dp"
        android:layout_height="126dp"
        android:layout_marginTop="-4dp"
        android:layout_marginEnd="-26dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/rectangle_2"
        app:layout_constraintTop_toTopOf="@+id/rectangle_2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/mask_group_1"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>